@@ -147,7 +147,11 @@ EXTRA_DIST = run-arextract.sh run-arsymtest.sh \
 	     testfile52-64.prelink.so.bz2 testfile52-64.noshdrs.so.bz2 \
 	     testfile53-32.bz2 testfile53-32.debug.bz2 \
 	     testfile53-32.prelink.bz2 testfile53-64.bz2 \
-	     testfile53-64.debug.bz2 testfile53-64.prelink.bz2
+	     testfile53-64.debug.bz2 testfile53-64.prelink.bz2 \
+	     testfile54-32.so.bz2 testfile54-32.so.debug.bz2 \
+	     testfile54-32.prelink.so.bz2 testfile54-32.noshdrs.so.bz2 \
+	     testfile54-64.so.bz2 testfile54-64.so.debug.bz2 \
+	     testfile54-64.prelink.so.bz2 testfile54-64.noshdrs.so.bz2
 
 installed_TESTS_ENVIRONMENT = libdir=$(DESTDIR)$(libdir) \
 			      bindir=$(DESTDIR)$(bindir) \
